<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title_about"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        android:contentDescription="@string/cocacola"
        android:src="@drawable/poliburros" />

    <TextView
        android:id="@+id/short_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/short_about"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/short_about"
        android:layout_centerHorizontal="true"
        android:text="@string/contacto"
        android:textSize="20sp" />

</RelativeLayout>