<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/seleccione_ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/seleccione_ubicacion"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/seleccione_ubicacion"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/icono_lanzador_gps"
        android:src="@drawable/gps_icon_grey" />
    
    <TextView
        android:id="@+id/longi_lati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="150sp"
        android:text="@string/longi_lati"
        android:textSize="20sp" />

</RelativeLayout>