<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/block_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/block_1" >

    <TextView
        android:id="@+id/pregunta_sobre_ubicacion_del_negocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:layout_toStartOf="@+id/informacion_lanzador_gps"
        android:layout_toLeftOf="@+id/informacion_lanzador_gps"
        android:text="@string/pregunta_sobre_ubicacion_del_negocio"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/informacion_lanzador_gps"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginTop="12sp"
        android:src="@drawable/warning"
        android:contentDescription="@string/icono_informacion_lanzador_gps"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pregunta_sobre_ubicacion_del_negocio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp" >

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/middle_point_between_buttons"
            android:layout_toStartOf="@+id/middle_point_between_buttons"
            android:onClick="no"
            android:text="@string/no" />

        <TextView
            android:id="@+id/middle_point_between_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/middle_point_between_buttons"
            android:layout_toRightOf="@+id/middle_point_between_buttons"
            android:onClick="si"
            android:text="@string/si" />
    </RelativeLayout>

</RelativeLayout>