<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secuence_chooser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="14sp"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="6sp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/poliburros" />

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_toEndOf="@+id/img"
        android:layout_toRightOf="@+id/img"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/promos_label"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/color_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_toEndOf="@+id/img"
        android:layout_toRightOf="@+id/img"
        android:fontFamily="sans-serif-condensed"
        android:orientation="horizontal"
        android:text="@string/participa"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>