<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.fragancias.poliburros.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14sp"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="150sp"
                android:layout_height="120sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="6sp"
                android:contentDescription="@string/logo_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/olle_ke_rikura" />

            <TextView
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/joey"
                android:layout_margin="20sp"
                android:layout_toEndOf="@+id/img"
                android:layout_toRightOf="@+id/img"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_label"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/joey"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="12sp"
                android:layout_marginStart="12sp"
                android:contentDescription="@string/logo_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/joey_rikura" />

            <TextView
                android:id="@+id/joey_says"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12sp"
                android:layout_toLeftOf="@+id/joey"
                android:layout_toStartOf="@+id/joey"
                android:text="@string/olle_ke_riko" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>