<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.fragancias.poliburros.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="6sp"
                android:contentDescription="@string/logo_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/poliburros" />

            <TextView
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_toEndOf="@+id/img"
                android:layout_toRightOf="@+id/img"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/promos_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/trivia_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@+id/img"
                android:layout_toRightOf="@+id/img"
                android:layout_below="@+id/section_label"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/participa"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/cell"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="12sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/logo_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/cell" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_toEndOf="@+id/cell"
                android:layout_toRightOf="@+id/cell"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/price_status"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/color_blocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@+id/cell"
                android:layout_toRightOf="@+id/cell"
                android:layout_below="@+id/message"
                android:orientation="horizontal" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>